<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/padding_general" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_login" >

            <EditText
                android:id="@+id/login_username_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/login_textfieldlogin"
                android:hint="@string/username_hint_login"
                android:paddingLeft="@dimen/padding_left_editbox_extra_double"
                android:singleLine="true"
                android:textColor="@color/edit_text_color" />

            <EditText
                android:id="@+id/login_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_username_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top_general"
                android:background="@drawable/login_textfieldpassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding_left_editbox_extra_double"
                android:textColor="@color/edit_text_color" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top_general_double"
                android:background="@drawable/login_button"
                android:text="@string/start_collectit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/frag_login_forgot_pass_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                android:layout_marginTop="@dimen/margin_top_general_double"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_general"
                android:text="@string/forgot_your_password"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/frag_login_forgot_pass_txt"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_top_login" >

                <Button
                    android:id="@+id/frag_login_google_plus_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/landing_button_google"
                    android:text="@string/login_google_login_btn"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/frag_login_facebook_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_general"
                    android:background="@drawable/landing_button_fb"
                    android:text="@string/login_facebook_login_btn"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>