<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color"
    android:gravity="center"
    android:padding="@dimen/padding_general" >

    <EditText
        android:id="@+id/change_password_username_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_textfieldlogin"
        android:enabled="false"
        android:hint="@string/username_hint_login"
        android:paddingLeft="@dimen/padding_left_editbox_extra_double"
        android:textColor="@color/edit_text_color" />

    <EditText
        android:id="@+id/change_password_old_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_username_edit"
        android:layout_marginTop="@dimen/margin_top_general"
        android:background="@drawable/login_textfieldpassword"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_left_editbox_extra_double"
        android:singleLine="true"
        android:textColor="@color/edit_text_color" />

    <EditText
        android:id="@+id/change_password_new_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_old_password_edit"
        android:layout_marginTop="@dimen/margin_top_general"
        android:background="@drawable/login_textfieldpassword"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_left_editbox_extra_double"
        android:singleLine="true"
        android:textColor="@color/edit_text_color" />

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_new_password_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_general_double"
        android:background="@drawable/login_button"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />

</RelativeLayout>