<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/search_items_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_active_btn"
            android:text="@string/items"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/search_collections_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_inactive_btn"
            android:text="@string/collections_tab"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/search_users_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_tab_selector"
            android:text="@string/users"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/frag_home_msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_blank_screen_msg"
            android:textColor="@color/white"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <GridView
            android:id="@+id/home_gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:horizontalSpacing="@dimen/horizontal_spacing_home_grid"
            android:listSelector="@android:color/transparent"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/vertical_spacing_home_grid" >
        </GridView>

        <ListView
            android:id="@+id/frag_search_collection_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:listSelector="@android:color/transparent"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>